More reset styles to avoid page styles bleeding through.

--- a/css/ui-editor.css
+++ b/css/ui-editor.css
@@ -10,7 +10,7 @@ Editor
 
 .ep-editor .buttons, .ep-editor .dialog { position: absolute; line-height:0.8; width: 365px; border: solid 1px #5C6C7A; background-color: #E7F1FB; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F5FAFF), to(#DCE7F6)); background-image: -moz-linear-gradient(top,  #F5FAFF,  #DCE7F6); }
 .ep-editor .buttons {  padding: 5px 0; }
-.ep-editor .buttons .buttons-inner { -moz-border-radius:0; -webkit-border-radius: 0; border-radius: 0; overflow: hidden; padding: 0 5px; }
+.ep-editor .buttons .buttons-inner { -moz-border-radius:0; -webkit-border-radius: 0; border-radius: 0; overflow: hidden; padding: 0 5px; list-style-type: none; margin: 0; }
 .ep-editor .buttons .group { display: inline-block; border-right: 1px solid #AECFF0; border-left: 1px solid White; }
 .ep-editor .buttons .group.first { border-left-width: 0; }
 .ep-editor .buttons .group.last { border-right-width: 0; }
@@ -47,7 +47,7 @@ Editor
 .ep-editor .button .confirm { background-image: url('../images/tick-button.png'); }
 
 
-.ep-editor .button .menu { display: none; position: absolute; border: solid 1px #AABCD5; background-color: #E7F1FB; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F5FAFF), to(#DCE7F6)); background-image: -moz-linear-gradient(top,  #F5FAFF,  #DCE7F6); }
+.ep-editor .button .menu { padding:0; margin:0; list-style-type: none; display: none; position: absolute; border: solid 1px #AABCD5; background-color: #E7F1FB; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#F5FAFF), to(#DCE7F6)); background-image: -moz-linear-gradient(top,  #F5FAFF,  #DCE7F6); }
 .ep-editor .button .menu .button { font-size: 0.9em; }
 .ep-editor .button .menu .icon { width: auto; min-width: 14px; }
 .ep-editor .button .menu li { padding: 0; }
